// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentitiesCarousel should not render bubbles if number of identities is more than the maximum 1`] = `<div />`;

exports[`IdentitiesCarousel should render a bubble for each identity 1`] = `
<div>
  <ul
    class="bubbles"
  >
    <li
      class="item"
    >
      <a
        aria-label="Light DID Identity"
        class="bubble"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
        title="Light DID Identity"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="Identity with on-chain DID and lots of coins"
        class="bubble"
        href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
        title="Identity with on-chain DID and lots of coins"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="Identity which has a very very very very long name and might not even fit on the screen"
        class="bubble"
        href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
        title="Identity which has a very very very very long name and might not even fit on the screen"
      />
    </li>
    <li
      class="item"
    >
      <a
        aria-label="Add Identity"
        class="add"
        href="/identity/NEW"
        title="Add Identity"
      />
    </li>
  </ul>
</div>
`;

exports[`IdentitiesCarousel should render normal identities 1`] = `
<div>
  <div
    class="container"
  >
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with on-chain DID and lots of coins
        </span>
      </div>
    </section>
    <a
      aria-label="Light DID Identity"
      class="left"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
      title="Light DID Identity"
    />
    <a
      aria-label="Identity which has a very very very very long name and might not even fit on the screen"
      class="right"
      href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
      title="Identity which has a very very very very long name and might not even fit on the screen"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="Light DID Identity"
          class="bubble"
          href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
          title="Light DID Identity"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity with on-chain DID and lots of coins"
          class="bubble"
          href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
          title="Identity with on-chain DID and lots of coins"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity which has a very very very very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
          title="Identity which has a very very very very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should render the first identity 1`] = `
<div>
  <div
    class="container"
  >
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <a
      aria-label="Add Identity"
      class="left"
      href="/identity/NEW"
      title="Add Identity"
    />
    <a
      aria-label="Identity with on-chain DID and lots of coins"
      class="right"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
      title="Identity with on-chain DID and lots of coins"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="Light DID Identity"
          class="bubble"
          href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
          title="Light DID Identity"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity with on-chain DID and lots of coins"
          class="bubble"
          href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
          title="Identity with on-chain DID and lots of coins"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity which has a very very very very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
          title="Identity which has a very very very very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should render the last identity 1`] = `
<div>
  <div
    class="container"
  >
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity which has a very very very very long name and might not even fit on the screen
        </span>
      </div>
    </section>
    <a
      aria-label="Identity with on-chain DID and lots of coins"
      class="left"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
      title="Identity with on-chain DID and lots of coins"
    />
    <a
      aria-label="Add Identity"
      class="right"
      href="/identity/NEW"
      title="Add Identity"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="Light DID Identity"
          class="bubble"
          href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
          title="Light DID Identity"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity with on-chain DID and lots of coins"
          class="bubble"
          href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
          title="Identity with on-chain DID and lots of coins"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity which has a very very very very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
          title="Identity which has a very very very very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should render the new identity 1`] = `
<div>
  <div
    class="container"
  >
    <section>
      <a
        aria-label="Add Identity"
        class="add"
        href="/identity/add"
        title="Add Identity"
      />
    </section>
    <a
      aria-label="Identity which has a very very very very long name and might not even fit on the screen"
      class="left"
      href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
      title="Identity which has a very very very very long name and might not even fit on the screen"
    />
    <a
      aria-label="Light DID Identity"
      class="right"
      href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
      title="Light DID Identity"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="Light DID Identity"
          class="bubble"
          href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1"
          title="Light DID Identity"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity with on-chain DID and lots of coins"
          class="bubble"
          href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo"
          title="Identity with on-chain DID and lots of coins"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity which has a very very very very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653"
          title="Identity which has a very very very very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;

exports[`IdentitiesCarousel should support other paths 1`] = `
<div>
  <div
    class="container"
  >
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity which has a very very very very long name and might not even fit on the screen
        </span>
      </div>
    </section>
    <a
      aria-label="Identity with on-chain DID and lots of coins"
      class="left"
      href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/claim"
      title="Identity with on-chain DID and lots of coins"
    />
    <a
      aria-label="Add Identity"
      class="right"
      href="/identity/NEW/claim"
      title="Add Identity"
    />
    <ul
      class="bubbles"
    >
      <li
        class="item"
      >
        <a
          aria-label="Light DID Identity"
          class="bubble"
          href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/claim"
          title="Light DID Identity"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity with on-chain DID and lots of coins"
          class="bubble"
          href="/identity/4pNXuxPWhMxhRctgB4qd3MkRt2Sxp7Y7sxrApVCVXCEcdQMo/claim"
          title="Identity with on-chain DID and lots of coins"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Identity which has a very very very very long name and might not even fit on the screen"
          class="bubble"
          href="/identity/4pUVoTJ69JMuapNducHJPU68nGkQXB7R9xAWY9dmvUh42653/claim"
          title="Identity which has a very very very very long name and might not even fit on the screen"
        />
      </li>
      <li
        class="item"
      >
        <a
          aria-label="Add Identity"
          class="add"
          href="/identity/NEW/claim"
          title="Add Identity"
        />
      </li>
    </ul>
  </div>
</div>
`;
